# Sorting

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CmakePresets.json  README.md
.github/workflows/: build.yml  cmake-multi-platform.yml  test.yml
android/: CMakeLists.txt  CMakePresets.json  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/theultimateorion/orionsort_android/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: entry.cpp
android/app/src/main/java/com/orionsort/android/: MainActivity.kt
android/app/src/main/java/com/theultimateorion/orionsort_android/: MainActivity.kt
android/app/src/main/java/org/libsdl/: app
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/theultimateorion/orionsort_android/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
cmake/: lexico_fix.h
includes/: App.h  main.h
includes/core/: App.h  AppCtx.h  app.h  app_ctx.h  timer.h
includes/core/logging/: Logging.h  logging.h
includes/core/platform/: build_info.h  display.h  dpi.h
includes/core/registry/: registry.h  sort_entry.h  sort_registry.h
includes/renderer/: DisplayType.h  Renderer.h  Sound.h  context.h  disp_type.h  render_params.h  sort_view.h  state.h  ui.h
includes/sort/: BogoSort.h  BubbleSort.h  CombSort.h  GravitySort.h  InsertionSort.h  MergeSort.h  PigeonHoleSort.h  QuickSort.h  RadixLSDSort.h  SelectionSort.h  Sort.h  array.h  base.cpp  base.h  category.h  flags.h  parametrized.h  sort.h
includes/sort/distribution/: bogo.h  gravity.h  pigeon_hole.h  radix_lsd.h
includes/sort/exchange/: bubble.h  cocktail_shaker.h  comb.h  quick.h
includes/sort/insertion/: insertion.h
includes/sort/merge/: merge.h
includes/sort/selection/: selection.h
includes/sound/: Sound.h  sound_engine.h
includes/utils/: CommonUtils.h  common.h  renderer.h
libs/imgui/: CMakeLists.txt
macos/: Info.plist
scripts/: android_push_and_run.bat  android_push_and_run.sh  clean.bat  clean.sh
scripts/other/: line_count.py
src/: App.cpp  main.cpp
src/core/: App.cpp  app.cpp  app_ctx.cpp  timer.cpp
src/core/logging/: logging.cpp
src/core/platform/: display.cpp  dpi.cpp
src/core/registry/: sort_registry.cpp
src/imgui/backends/: imgui_impl_sdl3.cpp  imgui_impl_sdlrenderer3.cpp
src/renderer/: Renderer.cpp  Sound.cpp  context.cpp  sort_view.cpp  ui.cpp
src/sort/: BogoSort.cpp  BubbleSort.cpp  CombSort.cpp  GravitySort.cpp  InsertionSort.cpp  MergeSort.cpp  PigeonHoleSort.cpp  QuickSort.cpp  RadixLSDSort.cpp  SelectionSort.cpp  Sort.cpp  base.cpp  bogo.cpp  bubble.cpp  comb.cpp  flags.cpp  gravity.cpp  insertion.cpp  merge.cpp  pigeon_hole.cpp  quick.cpp  radix_lsd.cpp  selection.cpp
src/sort/algorithms/: bogo.cpp  bubble.cpp  cocktail_shaker.cpp  comb.cpp  gravity.cpp  insertion.cpp  merge.cpp  pigeon_hole.cpp  quick.cpp  radix_lsd.cpp  selection.cpp
src/sound/: Sound.cpp  sound_engine.cpp
src/utils/: RenderUtils.cpp  common.cpp  renderer.cpp
test/: CMakeLists.txt  main.test.cc
tests/: main.test.cc
